--- a/community/templates/community/gallery.html
+++ b/community/templates/community/gallery.html
@@ -1,6 +1,6 @@
 {% extends 'community/base.html' %}
 
-{% block title %} gallery - {{block.super}}{ endblock title %}
+{% block title %} gallery - {{block.super}}{% endblock title %}
 
 {% block content %}
 
