--- a/community/templates/community/events.html
+++ b/community/templates/community/events.html
@@ -1,6 +1,6 @@
 {% extends 'community/base.html' %}
 
-{% block title %} events - {{block.super}}{ endblock title %}
+{% block title %} events - {{block.super}}{% endblock title %}
 
 {% block content %}
 
