--- a/community/templates/community/login.html
+++ b/community/templates/community/login.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "community/base.html" %}
+{% block content %}
 <form method = 'post'>
     {% csrf_token %}
     {{ form.as_p }}
