--- a/community/templates/community/home.html
+++ b/community/templates/community/home.html
@@ -2,15 +2,23 @@
 
 {% block content %}
 <!-- Adding in login/logout links -->
+<div class="container mt-4 ">
+    <h1> Welcome to the Community Center</h1>
+    <p class="mt-3">
+        {% if user.is_authenticated %}
 
-<p>
-    {% if user.is_authenticated %}
-     Hi , {{user.username}} ! <a href="{% url 'logout' %}" > Logout </a>
-    {% else %}
-        <a href ="{% url 'login' %}">Login </a>
-    {% endif %}
-</p>
+        Hi , {{ user.name }}
+        <a href="{% url 'logout' %}" class="btn btn-light ">Logout </a>
+        {% else %}
+        <div class="btn-group" role="group" aria-label="login/signup">
+            <a href="{% url 'login' %}" class="btn btn-primary"> Login </a>
+            <a href="{% url 'register_public' %}" class="btn btn-primary"> Sign up </a>
+            <a href="{% url 'register_instructor'  %}" class="btn btn-primary"> Sign up as Instructor </a>
+            <a href="{% url  'register_government' %}" class="btn btn-primary"> Sign up as Government Official </a>
+        </div>
+        {% endif %}
+    </p>
+</div>
 
-<h1> Welcome to the community Center</h1>
 
 {% endblock content %}
