--- a/community/templates/community/home.html
+++ b/community/templates/community/home.html
@@ -7,8 +7,12 @@
     <p class="mt-3">
         {% if user.is_authenticated %}
 
-        Hi , {{ user.name }}
+            Hi , {{ user.name }}
+            {% if user.profile.role == 'INSTRUCTOR' or user.profile.role =="GOVERNMENT" %}
+                <a href="{% url 'create_event' %}" class = "btn btn-success"> Create an Event </a>
+            {% endif %}
         <a href="{% url 'logout' %}" class="btn btn-light ">Logout </a>
+        
         {% else %}
         <div class="btn-group" role="group" aria-label="login/signup">
             <a href="{% url 'login' %}" class="btn btn-primary"> Login </a>
