--- a/community/templates/community/home.html
+++ b/community/templates/community/home.html
@@ -8,7 +8,7 @@
         {% if user.is_authenticated %}
 
             Hi , {{ user.name }}
-            {% if user.profile.role == 'INSTRUCTOR' or user.profile.role =="GOVERNMENT" %}
+            {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
                 <a href="{% url 'create_event' %}" class = "btn btn-success"> Create an Event </a>
             {% endif %}
         <a href="{% url 'logout' %}" class="btn btn-light ">Logout </a>
