--- a/community/templates/community/home.html
+++ b/community/templates/community/home.html
@@ -24,5 +24,22 @@
     </p>
 </div>
 
+<div>
+    {% if created_events %}
+    <h2> Your Created Events:</h2>
+    <ul>
+        {% for event in created_events %}
+        <li>{{ event.title }}</li>
+        <p>Date: {{ event.date }}</p>
+        <p>Start Time : {{ event.start_time }}</p>
+        <p> Capacity: {{ event.capacity }}</p>
+        <p> Cost: {{ event.cost }} </p>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <p> You have not create any events yet.</p>
+    {% endif %}
+</div>
+
 
 {% endblock content %}
