--- a/community/templates/community/base.html
+++ b/community/templates/community/base.html
@@ -12,6 +12,28 @@
 
 <body>
     <header>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <a class="navbar-brand" href="{% url 'home' %}"> Community Center </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'home' %}"> Home <span class"sr-only"> (current)</span></a>
+                </li>
+                <li class="nav-item">
+                <a href="" class="nav-link" href="{% url 'about' %}" >About </a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link" href="{% url 'gallery' %}" > Gallery </a>
+                    </li>
+                    <li class="nav-item">
+                <a href="" class="nav-link" href="{% url 'booking' %}"> Booking </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
         <!-- Navbar logo  -->
     </header>
 
