Style about page

--- a/community/templates/community/about.html
+++ b/community/templates/community/about.html
@@ -1,5 +1,5 @@
 {% extends 'community/base.html' %}
-
+{% load static %}
 {% block title %} About - {{block.super}}{% endblock title %}
 
 {% block content %}
@@ -30,7 +30,10 @@
     </div>
 
     <div class="col-md-6">
-        <img src="assets/images/community-center.jpg" alt="community center image ">
+        <div class="card">
+            <h5 class="card-title"> Our New Facility </h5>
+        <img src="{% static 'assets/images/community-center.jpg' %}" alt="community center image " class="card-img-top">
+    </div>
     </div>
 </div>
 </div>
