--- a/community/templates/community/base.html
+++ b/community/templates/community/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %} Community Center {% endblock title %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="stylesheet" src ="{% static 'assets/styles/style.css' %}"> 
 </head>
 
 <body>
@@ -23,13 +24,13 @@
                     <a class="nav-link" href="{% url 'home' %}"> Home <span class"sr-only"> (current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a href="" class="nav-link" href="{% url 'about' %}" >About </a>
+                <a  class="nav-link" href="{% url 'about' %}" >About </a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link" href="{% url 'gallery' %}" > Gallery </a>
+                    <a  class="nav-link" href="{% url 'gallery' %}" > Gallery </a>
                     </li>
                     <li class="nav-item">
-                <a href="" class="nav-link" href="{% url 'booking' %}"> Booking </a>
+                <a  class="nav-link" href="{% url 'booking' %}"> Booking </a>
                 </li>
             </ul>
         </div>
