Add gallery update from events

--- a/community/templates/community/about.html
+++ b/community/templates/community/about.html
@@ -32,7 +32,7 @@
     <div class="col-md-6">
         <div class="card">
             <h5 class="card-title"> Our New Facility </h5>
-        <img src="{% static 'assets/images/community-center.jpg' %}" alt="community center image " class="card-img-top">
+        <img src="{% static 'assets/images/community-center.jpg' %}" alt="community center image " class="card-img-top community-center-image-card">
     </div>
     </div>
 </div>
