--- a/community/templates/community/events/delete_event_image.html
+++ b/community/templates/community/events/delete_event_image.html
@@ -4,8 +4,9 @@
 <div class="container mt-4">
 <h2> Delete Event Image </h2>
 <p> Are you sure you want to delete the image for the event "{{ event.title }}"?</p>
-<form method="post">
-    {% csfr token %}
+{% load crispy_forms_tags %}
+<form method="post"  enctype="multipart/form-data" >
+    {% csrf_token %}
     <button type="submit" class="btn btn-danger"> Delete Image </button>
     <a href="{% url 'gallery' %}" class="btn btn-secondary"> Cancel </a>
 </form>
