--- a/community/templates/community/home.html
+++ b/community/templates/community/home.html
@@ -7,12 +7,12 @@
     <p class="mt-3">
         {% if user.is_authenticated %}
 
-            Hi , {{ username.userProfile }}
-            {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
-                <a href="{% url 'create_event' %}" class = "btn btn-success"> Create an Event </a>
-            {% endif %}
+        Hi , {{ username.userProfile }}
+        {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
+        <a href="{% url 'create_event' %}" class="btn btn-success"> Create an Event </a>
+        {% endif %}
         <a href="{% url 'logout' %}" class="btn btn-light ">Logout </a>
-        
+
         {% else %}
         <div class="btn-group" role="group" aria-label="login/signup">
             <a href="{% url 'login' %}" class="btn btn-primary"> Login </a>
@@ -36,6 +36,9 @@
         <p>Start Time : {{ event.start_time }}</p>
         <p> Capacity: {{ event.capacity }}</p>
         <p> Cost: {{ event.cost }} </p>
+        {% if event.image %}
+        <img src="{{ event.image.url }}" alt="Event Image">
+        {% endif %}
         {% endfor %}
     </ul>
     {% else %}
