--- a/community/templates/community/home.html
+++ b/community/templates/community/home.html
@@ -56,8 +56,8 @@
             {% if event.image %}
             <img src="{{ event.image.url }}" alt="Event Image">
             {% endif %}
-            <a href="{% url  'update_event' %}" class="btn btn-primary"> Update </a>
-            <a href="{% url 'delete_event' %}" class="btn btn-danger"> Delete </a>
+            <a href="{% url  'update_event' event.id %}" class="btn btn-primary"> Update </a>
+            <a href="{% url 'delete_event' event.id %}" class="btn btn-danger"> Delete </a>
         </div>
     </div>
     {% endfor %}
