--- a/community/templates/community/events/confirm_delete.html
+++ b/community/templates/community/events/confirm_delete.html
@@ -1,5 +1,6 @@
 {% extends 'community/base.html' %}
 
+<!-- confirm_delete.html-->
 {% block content %}
 <div class="container">
 <form method="POST" id="delete-event-form">
