--- a/community/templates/community/home.html
+++ b/community/templates/community/home.html
@@ -1,5 +1,26 @@
 {% extends 'community/base.html' %}
+{% load static %}
 
+<div class="banner-container">
+    <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="{% static 'assets/images/first-aid.png' %}" class="d-block w-100" alt="Event">
+        </div>
+        <div class="carousel-item">
+          <img src="{% static 'assets/images/first-aid.png' %}" class="d-block w-100" alt="Event">
+        </div>
+    </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
 {% block content %}
 <!-- Adding in login/logout links -->
 <div class="container mt-4 d-flex justify-content-center ">
@@ -113,6 +134,7 @@
 <div> 
     <h3> Your Balance: {{ user.profile.balance }}</h3>
     <h4> Recent Transactions </h4>
+    <canvas id="transactionGraph" width ='400' height="400"></canvas>
     <ul>
         {% for transaction in balance_transactions %}
         <li> {{ transaction.create_at }}: {{ transaction.amount }} {{ transaction.transaction_type }}</li>
@@ -121,5 +143,34 @@
         {% endfor %}
     </ul>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script>
+document.addEventListener('DOMContentLoaded',function(){ 
+    const transactionDates = JSON.parse('{{ transaction_dates|safe }}');
+    const transactionAmounts = JSON.parse('{{ transaction_amounts|safe }}');
+    const ctx = document.getElementById('transactionGraph').getContext('2d');
+    const transactionGraph = new Chart(ctx, {
+        type:'line',
+        data: {
+            labels:transactionDates,
+            datasets:[{
+                label:'Transaction History',
+                data:transactionAmounts,
+                backgroundColor:'rgba(54,162,235,0.2)',
+                borderColor:'rgba(54,162,235,1)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    beginAtZero:false
+                }
+            }
+        }
+    });
+ }); </script>
 {% endif %}
+
 {% endblock content %}
