--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -1,14 +1,16 @@
 {% extends 'community/base.html' %}
 {% load static %}
 
+{% block content %}
+
 <div class="banner-container">
     <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="{% static 'assets/images/first-aid.png' %}" class="d-block w-100" alt="Event">
+          <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521728/pexels-katerina-holmes-5905456_zkqiwh.jpg" class="d-block w-100" alt="Event">
         </div>
         <div class="carousel-item">
-          <img src="{% static 'assets/images/first-aid.png' %}" class="d-block w-100" alt="Event">
+          <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521728/pexels-katerina-holmes-5905456_zkqiwh.jpg" class="d-block w-100" alt="Event">
         </div>
     </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
@@ -21,7 +23,6 @@
           </button>
         </div>
       </div>
-{% block content %}
 <!-- Adding in login/logout links -->
 <div class="container mt-4 d-flex justify-content-center ">
     <div class="row">
