--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -3,57 +3,93 @@
 
 {% block content %}
 
-<div class="banner-container">
-    <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521728/pexels-katerina-holmes-5905456_zkqiwh.jpg" class="d-block w-100" alt="Event">
-        </div>
-        <div class="carousel-item">
-          <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521728/pexels-katerina-holmes-5905456_zkqiwh.jpg" class="d-block w-100" alt="Event">
-        </div>
-    </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
+
 <!-- Adding in login/logout links -->
-<div class="container mt-4 d-flex justify-content-center ">
-    <div class="row">
-        <div class="col-12">
-            <h1> Welcome to the Community Center</h1>
-        </div>
-        <div class="col-12">
-            <p class="mt-3">
-                {% if user.is_authenticated %}
 
-                Hi , {{ user.profile }}
-                {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
-                <a href="{% url 'create_or_update_event' %}" class="btn btn-success"> Create an Event </a>
-                {% endif %}
-                <a href="{% url 'logout' %}" class="btn btn-light ">Logout </a>
+<div class="row carousel-inner d-flex justify-content-center align-items-center pb-5">
 
-                {% else %}
-                <div class="btn-group" role="group" aria-label="login/signup">
-                    <a href="{% url 'login' %}" class="btn btn-primary"> Login </a>
-                    <a href="{% url 'register_public' %}" class="btn btn-primary"> Sign up </a>
-                    <a href="{% url 'register_instructor'  %}" class="btn btn-primary"> Sign up as Instructor </a>
-                    <a href="{% url  'register_government' %}" class="btn btn-primary"> Sign up as Government Official
-                    </a>
+
+    <div class="col-12 container mt-4 d-flex justify-content-center ">
+        <h1> Welcome to the Community Center</h1>
+    </div>
+    <div class="col-12  align-items-center text-center mt-3">
+        <p>
+            {% if user.is_authenticated %}
+
+            Hi , {{ user.profile }}
+            {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
+            <a href="{% url 'create_or_update_event' %}" class="btn btn-success"> Create an Event </a>
+            {% endif %}
+            <a href="{% url 'logout' %}" class="btn btn-light ">Logout </a>
+
+            {% else %}
+            <div class="btn-group" role="group" aria-label="login/signup">
+                <a href="{% url 'login' %}" class="btn btn-primary"> Login </a>
+                <a href="{% url 'register_public' %}" class="btn btn-primary"> Sign up </a>
+                <a href="{% url 'register_instructor'  %}" class="btn btn-primary"> Sign up as Instructor </a>
+                <a href="{% url  'register_government' %}" class="btn btn-primary"> Sign up as Government Official
+                </a>
+            </div>
+            {% endif %}
+        </p>
+    </div>
+
+    <div class="col-md-3 event-info">
+        <h3 class="text-center">Types of Events</h3>
+        <p>Maths Tutoring: Enhance your skills with expert tutors.Yoga for Wellness: Stretch and strengthen your body.
+        Chess Championship: Showcase your strategic prowess.
+        <p> And more .... </p>
+    </div>
+    <div class="col-12 col-md-6 h-75">
+        <div class="banner-container">
+            <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
+
+                <div class="carousel-item active">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521728/pexels-katerina-holmes-5905456_zkqiwh.jpg"
+                        class="d-block w-100" data-bs-event="maths-tutor" alt=" Maths Tutoring Event">
                 </div>
-                {% endif %}
-            </p>
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521726/pexels-yan-krukau-8436587_r5ahji.jpg"
+                        class="d-block w-100" data-bs-event="yoga" alt=" Yoga Event">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521726/pexels-alex-green-5692696_rlmgle.jpg"
+                        class="d-block w-100" data-bs-event="chess" alt=" Chess Event">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521724/pexels-%E7%A5%9D-%E9%B9%A4%E6%A7%90-716276_avkbnm.jpg"
+                        class="d-block w-100" data-bs-event="gallery" alt=" Gallery  Event">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521723/pexels-budgeron-bach-5149649_soauqj.jpg"
+                        class="d-block w-100" data-bs-event="dance" alt=" Dancing event">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521718/pexels-orkhan-shahbaz-18751164_vuz7uu.jpg"
+                        class="d-block w-100" data-bs-event="politic" alt=" Political  Event">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521641/first-aid_mf3tfy.png"
+                        class="d-block w-100" data-bs-event="firstaid" alt=" First Aid  Event">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
+
     </div>
 </div>
-
-
 
 
 
@@ -78,18 +114,19 @@
             {% if event.image %}
             <img src="{{ event.image.url }}" alt="Event Image">
             {% endif %}
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" 
-            aria.expanded="false" aria-controls="collapse{{ forloop.counter }}"> More Info </button>
-        
-         <div class="collapse" id="collapse{{ forloop.counter }}">
-            <div class="card card-body">{{ event.description }}</div>
-         </div>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapse{{ forloop.counter }}" aria.expanded="false"
+                aria-controls="collapse{{ forloop.counter }}"> More Info </button>
+
+            <div class="collapse" id="collapse{{ forloop.counter }}">
+                <div class="card card-body">{{ event.description }}</div>
+            </div>
             <a href="{% url  'update_event' event.id %}" class="btn btn-primary"> Update </a>
             {% if event.capacity >= 60 %}
             <a href="{% url 'delete_event' event.id %}" class="btn btn-danger"> Delete </a>
             {% else %}
-            <p> Event deletion is  disabled after public booking of course </p>
-            <button class="btn btn-danger disabled" >Delete </button>
+            <p> Event deletion is disabled after public booking of course </p>
+            <button class="btn btn-danger disabled">Delete </button>
             {% endif %}
         </div>
     </div>
@@ -116,12 +153,13 @@
             </div>
             <div class="card-body">
                 <p> {{ event.date|date:"l, F j , Y" }}-{{ event.start_time }} - {{ event.end_time }} </p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" 
-                aria.expanded="false" aria-controls="collapse{{ forloop.counter }}"> More Info </button>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapse{{ forloop.counter }}" aria.expanded="false"
+                    aria-controls="collapse{{ forloop.counter }}"> More Info </button>
             </div>
-             <div class="collapse" id="collapse{{ forloop.counter }}">
+            <div class="collapse" id="collapse{{ forloop.counter }}">
                 <div class="card card-body">{{ event.description }}</div>
-             </div>
+            </div>
         </div>
     </div>
     {% endfor %}
@@ -132,10 +170,10 @@
 {% endif %}
 
 {% if user.is_authenticated %}
-<div> 
+<div>
     <h3> Your Balance: {{ user.profile.balance }}</h3>
     <h4> Recent Transactions </h4>
-    <canvas id="transactionGraph" width ='400' height="400"></canvas>
+    <canvas id="transactionGraph" width='400' height="400"></canvas>
     <ul>
         {% for transaction in balance_transactions %}
         <li> {{ transaction.create_at }}: {{ transaction.amount }} {{ transaction.transaction_type }}</li>
@@ -143,35 +181,37 @@
         <li> No recent transactions.</li>
         {% endfor %}
     </ul>
+    {% endif %}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script>
-document.addEventListener('DOMContentLoaded',function(){ 
-    const transactionDates = JSON.parse('{{ transaction_dates|safe }}');
-    const transactionAmounts = JSON.parse('{{ transaction_amounts|safe }}');
-    const ctx = document.getElementById('transactionGraph').getContext('2d');
-    const transactionGraph = new Chart(ctx, {
-        type:'line',
-        data: {
-            labels:transactionDates,
-            datasets:[{
-                label:'Transaction History',
-                data:transactionAmounts,
-                backgroundColor:'rgba(54,162,235,0.2)',
-                borderColor:'rgba(54,162,235,1)',
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero:false
+    document.addEventListener('DOMContentLoaded', function () {
+        const transactionDates = JSON.parse('{{ transaction_dates|safe }}');
+        const transactionAmounts = JSON.parse('{{ transaction_amounts|safe }}');
+        const ctx = document.getElementById('transactionGraph').getContext('2d');
+        const transactionGraph = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: transactionDates,
+                datasets: [{
+                    label: 'Transaction History',
+                    data: transactionAmounts,
+                    backgroundColor: 'rgba(54,162,235,0.2)',
+                    borderColor: 'rgba(54,162,235,1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: false
+                    }
                 }
             }
-        }
+        });
     });
- }); </script>
-{% endif %}
+</script>
+
 
 {% endblock content %}
